# internal/rest/post_image.go
@@ -18,14 +18,14 @@ import (
 //	@Param			correlation_id	header		string				true	"Logging Correlation Id"
 //	@Success		200				{object}	NewImageResponse	"Image"
 //	@Failure		400				{object}	errs.ValidationErr	"Bad Request"
-//	@Failure		401				{object}	server.ErrorData	"Unauthorized"
-//	@Failure		404				{object}	server.ErrorData	"Not Found"
-//	@Failure		500				{object}	server.ErrorData	"Internal Server Error"
+//	@Failure		401				{object}	rst.ErrorData		"Unauthorized"
+//	@Failure		404				{object}	rst.ErrorData		"Not Found"
+//	@Failure		500				{object}	rst.ErrorData		"Internal Server Error"
 //	@Router			/images/create [post]
 //
 // Init initializes the route
-func initPostImage() {
-	server.Router().POST(
+func initPostImage(engine *gin.Engine) {
+	engine.POST(
 		"/images/create",
 		server.ValidateAuthentication,
 		saveImage,
